이미지 교체, 상단 번호 삽입(추가 수정 요소  많음)

--- a/index.html
+++ b/index.html
@@ -33,7 +33,11 @@
     <!-- Navigation-->
     <nav class="navbar" id="mainNav">
         <div class="nav-container">
-            <a class="nav-logo nav-item" data-target="#page-top"><img src="assets/img/logo.png"></a>
+            <div>
+                <a class="nav-logo nav-item" data-target="#page-top"><img src="assets/img/logo.png"></a>
+                <a class="nav-logo nav-item"><img src="assets/img/phoneBtn.jpg"></a>    
+            </div>
+            
             <div class="nav-menu">
                 <button class="navToggle" id="navToggle">☰</button>
                 <ul class="nav-link" id="navLink">
@@ -70,7 +74,7 @@
     </section>
 
     <section class="page-section" id="text">
-        <img class="describe-img"src="assets/img/describe2.jpg" alt="describe_img2">
+        <img class="describe-img"src="assets/img/phoneNum.png" alt="describe_img2">
     </section>
 
     <!-- Services -->
@@ -375,20 +379,15 @@
     </section>
 
     <!-- text2 -->
-    <section class="page-section" id="text2">
+    <!-- <section class="page-section" id="text2">
         <div class="wrapper">
-            <!-- <div class="container text2-text">
-                <p class="text-p">전기수리부터 공사까지</p>
-                <p class="text-p"><span class="text2-span">"40년 경력 노하우"</span>와 <span class="text2-span">"철저한
-                        A/S"</span>로 책임지겠습니다.</p>
-            </div> -->
             <img class="text2-img" src="assets/img/text2.jpg" alt="text2_img">
         </div>
-    </section>
+    </section> -->
 
     <!-- footer -->
     <section class="page-section" id="footer">
-        <img class="banner-foot" src="assets/img/banner-foot.jpg" alt="banner_foot">
+        <img class="banner-foot" src="assets/img/bannerFoot.jpg" alt="banner_foot">
     </section>
 
 </body>
