블로그 썸네일 추가, 네비게이션바 fixed 해제

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="nav-container">
             <div>
                 <a class="nav-logo nav-item" data-target="#page-top"><img src="assets/img/logo.png"></a>
-                <a class="nav-logo nav-item"><img src="assets/img/phoneBtn.jpg"></a>    
+                <a class="nav-logo nav-item"><img src="assets/img/phoneBtn.jpg" alt="전화 버튼" id="phoneBtn"></a>    
             </div>
             
             <div class="nav-menu">
@@ -368,13 +368,38 @@
     <!-- example -->
     <section class="page-section" id="example">
         <div class="wrapper">
-            <h2 class="example-h2 italic">경희 전기의 시공사례</h2>
             <a  class="btn"
                 href="https://blog.naver.com/PostList.naver?blogId=kyeonghee_electronic&from=postList&categoryNo=14"
                 target="_blank" rel="noopener noreferrer">
                 시공사례 보러가기
             </a>
-            <img class="img-fluid example-img" style="width: 95vw;" src="assets/img/sample_example.png" alt="시공사례">
+            <div class="example-img">
+                <a class="example-item">
+                    <img src="assets/blog/blog1.png">
+                </a>
+                <a class="example-item">
+                    <img src="assets/blog/blog2.png">
+                </a>
+                <a class="example-item">
+                    <img src="assets/blog/blog3.png">
+                </a>
+                <a class="example-item">
+                    <img src="assets/blog/blog4.png">
+                </a>
+                <a class="example-item">
+                    <img src="assets/blog/blog5.jpg">
+                </a>
+                <a class="example-item">
+                    <img src="assets/blog/blog6.png">
+                </a>
+                <a class="example-item">
+                    <img src="assets/blog/blog7.png">
+                </a>
+                <a class="example-item">
+                    <img src="assets/blog/blog8.png">
+                </a>
+            </div>
+            
         </div>
     </section>
 
