--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="nav-container">
             <div>
                 <a class="nav-logo nav-item" data-target="#page-top"><img src="assets/img/logo.png"></a>
-                <a class="nav-logo nav-item"><img src="assets/img/phoneBtn.jpg" alt="전화 버튼" id="phoneBtn"></a>    
+                <a class="nav-logo nav-item call-link"><img src="assets/img/phone-btn.png" alt="전화 버튼" id="phoneBtn"></a>    
             </div>
             
             <div class="nav-menu">
@@ -74,7 +74,15 @@
     </section>
 
     <section class="page-section" id="text">
-        <img class="describe-img"src="assets/img/phoneNum.png" alt="describe_img2">
+        <div class="wrapper">
+            <!--<img class="text" src="assets/img/text.png">-->
+            <a class ="text">
+                빠른 전화 연결
+            </a>
+            <a class="phone-btn call-link" alt="전화 버튼">
+                <i class="fas fa-phone-alt"></i> 010-3707-3277
+             </a>
+        </div>
     </section>
 
     <!-- Services -->
@@ -368,11 +376,10 @@
     <!-- example -->
     <section class="page-section" id="example">
         <div class="wrapper">
-            <a  class="btn"
-                href="https://blog.naver.com/PostList.naver?blogId=kyeonghee_electronic&from=postList&categoryNo=14"
-                target="_blank" rel="noopener noreferrer">
-                시공사례 보러가기
-            </a>
+        <a class="blog-button" href="https://blog.naver.com/PostList.naver?blogId=kyeonghee_electronic&from=postList&categoryNo=14"
+            target="_blank" rel="noopener noreferrer">
+           시공사례 보러가기
+        </a>
             <div class="example-img">
                 <a class="example-item">
                     <img src="assets/blog/blog1.png">
