--- a/index.html
+++ b/index.html
@@ -75,10 +75,10 @@
 
     <section class="page-section" id="text">
         <div class="wrapper">
-            <!--<img class="text" src="assets/img/text.png">-->
-            <a class ="text">
+            <img class="text" src="assets/img/text.png">
+            <!--<a class ="text">
                 빠른 전화 연결
-            </a>
+            </a>-->
             <a class="phone-btn call-link" alt="전화 버튼">
                 <i class="fas fa-phone-alt"></i> 010-3707-3277
              </a>
