--- a/index.html
+++ b/index.html
@@ -417,10 +417,23 @@
         </div>
     </section> -->
 
-    <!-- footer -->
-    <section class="page-section" id="footer">
-        <img class="banner-foot" src="assets/img/bannerFoot.jpg" alt="banner_foot">
+    <!-- banner -->
+    <section class="page-section" id="banner">
+        <img class="banner" src="assets/img/bannerFoot.jpg" alt="banner">
     </section>
+
+    <!-- footer -->
+     <footer class="footer">
+        <div class="footer-info">
+            <p><strong>경희전기</strong> | 대표: 이춘홍</p>
+            <p>사업자등록번호: 204-06-28261</p>
+            <p>주소: 서울특별시 동대문구 회기로 148-5, 1층</p>
+            <p>전화: 010-3707-3277</p>
+          </div>
+          <div class="footer-copy">
+            &copy; 2025 경희전기. All rights reserved.
+          </div>
+     </footer>
 
 </body>
 
