--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <!-- Navigation-->
     <nav class="navbar" id="mainNav">
         <div class="nav-container">
-            <div>
+            <div class="nav-left">
                 <a class="nav-logo nav-item" data-target="#page-top"><img src="assets/img/logo.png"></a>
                 <a class="nav-logo nav-item call-link"><img src="assets/img/phone-btn.png" alt="전화 버튼" id="phoneBtn"></a>    
             </div>
